assets/styles/styles.scss
---
---

@import "jekyll-theme-primer";
@import "highlight-syntax";
@import "fonts";
@import "variables";

.content-body {
  width: 100%;
  padding: 40px;
  flex-grow: 1;
}

body {
  font-family: 'iAWriterQuattroS', sans-serif;
  font-size: $text-size;
}

h1,
h2,
h3,
h4 {
  font-weight: normal !important;
  font-family: 'iAWriterQuattroS', sans-serif;
}

h1 {
  font-size: $h1-size;
}

h2 {
  color: $h2-color;
  font-size: inherit;
}

h4 {
  font-style: normal;
  font-weight: 400;
}

p,
ol,
ul {
  font-family: 'iAWriterQuattroS', sans-serif;
  line-height: $line-height;
}

.about-links {
  ol,
  ul {
    margin-left: 20px;
    margin-right: 20px;
  }
}

p {
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
}

a {
  color: $text-color;
  text-decoration: underline;
  text-decoration-color: $link-color;
  text-underline-offset: 3px;
}

a:hover {
  color: $link-color;
}

blockquote {
  color: $blockquote-color;
  border-left: 2px solid $blockquote-border-color;
  padding-left: 16px;
  font-size: 0.95em;
}

.article {
  h1,
  h2,
  h3,
  h4 {
    margin-bottom: 16px;
  }
}

.book-details-horizontal-container {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}

.book-details-thumbnail-img {
  width: 175px;
  height: 250px;
}

.book-details-img {
  width: 245px;
  height: 350px;
}

.book-details-title-container {
  margin-left: 2em;
  display: block;
}

.book-details-title-block {
  margin-top: 0px;
  display: block;
}

.book-details-title {
  margin-block-end: 0em;
}

h2.book-details-subtitle {
  color: $subtitle-color;
  margin-block-start: 0em;
  margin-block-end: 0em;
}

.book-details-info {
  font-size: $footnote-size;
  color: $subtitle-color;
  margin-top: 24px;

  .book-details-info-list {
    list-style-type: none;
  }
}

.book-details-flatlay {
  width: 500px;
  height: 457px;
  border-radius: 8px;
}

.book-details-author {
  border-radius: 8px;
  width: 400px;
  height: 531px;
}

@media only screen and (max-width: 820px) {
  .book-details-horizontal-container {
      display: block;
  }

  .book-details-info {
    display: none;
  }

  .book-details-thumbnail-img {
    margin: auto;
    display: block;
  }

  .book-details-img {
    margin: auto;
    display: block;
  }

  .book-details-title, .book-details-subtitle {
    text-align: center;
  }

  .book-details-title-container {
    margin-left: 0em;
  }

  .book-details-title-block {
    margin-top: 16px;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .book-details-flatlay {
    width: 300px;
    height: 280px;
  }

  .book-details-author {
    width: 300px;
    height: 398px;
  }
}


.blog-subtitle, .book-list-subtitle {
  color: $subtitle-color;
  margin-block-start: 0.4em;
  font-size: $subtitle-size;
}

.subtitle {
  color: $subtitle-color;
  margin-block-start: 0.4em;
}

.min-height-full {
  min-height: 100vh;
}

.project-subtitle {
  color: $subtitle-color;
  font-family: 'iAWriterQuattroS', sans-serif;
  font-size: $project-subtitle-size;
}

.post-subtitle,
.post-date {
  color: $subtitle-color;
  font-family: 'iAWriterQuattroS', sans-serif;
}

.post-date {
  width: 85px;
}

.post-list-content {
  margin-left: 1em;
  max-width: 600px;
  flex-grow: 1;
}

.post-subtitle, .post-date  {
  font-size: $subtitle-size;
}

.post-title, 
.post-title:hover, 
.project-title,
.project-title:hover,
.blog-nav-link,
.blog-nav-link:hover {
  font-size: inherit;
  margin-block-end: 0em;
}

.blog-nav-link,
.blog-nav-link:hover {
  text-decoration: none;
}

.project-list  {
  p {
    margin-block-start: 0em;
    margin-block-end: 0em;
  }
}

.project-img {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  margin-right: 1em;
  margin-top: 8px;
  border-width: 1px;
  border-color: $link-color;
}

.post-title:hover,
.project-title:hover {
  color: $link-color;
}

.sidebar {
  width: $sidebar-width;
}

@media only screen and (max-width: 767px) {
  .sidebar {
    width: 100%;
  }

  .iframe-wrapper {
    position: relative;
    height: 0;
    padding-top: 56.25%;
    overflow: hidden;
    iframe {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
    }
  }
}

nav.masthead {
  margin-block-start: 20px;
}

nav > p {
  text-align: left;
  font-family: 'iAWriterQuattroS', sans-serif;
}

.masthead-links {
  display: block;
  width: 100%;
}

.masthead-links h4 {
  width: 100%;
  font-weight: 400;
  padding-left: 0px;
  padding-right: 0px;
  align-self: center;
}

.masthead p {
  margin-top: 40px;
}

.name-navigation {
  display: block;
}

.home-navigation {
  display: none;
}

.masthead-title {
  width: 100%;
  margin-bottom: 32px;
  
  a {
    text-decoration: none;
  }
}

.masthead-title h1 {
  align-self: center;
  font-weight: 400;
}

@media only screen and (max-width: 767px) {
  nav.masthead {
    padding: 8px 16px 4px 16px;
    flex-direction: column;
    display: block;
    align-content: flex-start;
    margin-block-start: 4px;
  }

  .masthead-title {
    margin-bottom: 8px;
  }

  .masthead-links {
    margin-top: 20px;
    display: flex;
  }

  .masthead-links h4 {
    width: auto;
    display: flex;
    flex-shrink: 1;
    padding-left: 0px;
    padding-right: 25px;
  }

  .masthead p {
    width: 40%;
    align-self: center;
    margin-top: 5px;
  }
}

@media only screen and (max-width: 414px) {
  nav.masthead {
    margin-block-start: 1em;
  }

  .masthead-links {
    margin-top: 20px;
    display: flex;
    align-content: flex-start;
    justify-content: center;
    width: 80%;
    align-self: center;
  }

  .masthead-links h4 {
    min-width: 60px;
    padding-left: 5px;
    padding-right: 5px;
    width: 30%;
  }

  .masthead p {
    width: 60%;
    align-self: center;
    margin-top: 5px;
  }
}

.masthead-links a,
.masthead-links a:visited {
  color: $masthead-text-color;
  text-decoration: none;
}

.masthead-links a:hover {
  text-decoration: none;
  color: $link-color;
}

.footerLayout {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-content: center;
}


.footerIcons {
  display: flex;
}

.emailFooterTitle {
  font-weight: 600;
  font-size: $email-footer-title-size;
}

.emailFooterText {
  font-family: 'iAWriterQuattroS', sans-serif;
  font-size: $email-footer-size;
}

input:focus,
textarea:focus,
form-control:focus {
  outline: none !important;
  border: none;
}

.footerText {
  text-align: center;
  width: 100%;
  font-family: 'iAWriterQuattroS', sans-serif; 
  color: $footer-text-color;
  padding-bottom: 30px;
}

.footerRule {
  width: 70%;
  margin-left: auto;
  margin-right: auto;
  margin-block-start: 0em;
  margin-block-end: 0em;
}

hr.book-divider {
  width: 200px;
  margin-top: 2em;
  margin-bottom: 3em;
  border: 0;
  border-top: 1.5px solid #ddd;
}

hr.section-divider {
  margin-top: $section-divider-mt;
  margin-bottom: $section-divider-mb;
  display: block;
  border: 0;
  text-align: center;
  overflow: visible;
  box-sizing: content-box;
  height: 0;
}

hr.section-divider:before {
  --x-height-multiplier: 0.342;
  --baseline-multiplier: 0.22;
  font-family: 'iAWriterQuattroS', sans-serif;
  font-weight: 400;
  font-style: italic;
  font-size: $section-divider-font-size;
  letter-spacing: 0.6em;
  content: "...";
  display: inline-block;
  color: $section-divider-color;
  position: relative;
  top: -30px;
}

.post-navigation {
  font-family: 'iAWriterQuattroS', sans-serif;
  font-size: $post-nav-size;
  display: flex;
  width: 100%;
}

.prev {
  padding-right: 20px;
  text-align: left;
  padding-left: 5px;
}

.next {
  text-align: right;
  margin-right: 5px;
}

.next-arrow {
  width: 10px;
}

.post-prev-nav {
  width: 50%;
  flex-direction: row;
  display: flex;
  flex-grow: 1;
  align-items: flex-start;
  flex-wrap: nowrap;
}

.post-next-nav {
  width: 50%;
  flex-direction: row;
  display: flex;
  flex-grow: 1;
  align-items: flex-start;
  justify-content: flex-end;
  flex-wrap: nowrap;
}

.tag-container {
  flex: 1;
  flex-direction: row; 
  margin-top: 3px;
  a {
    text-decoration: none;
  }

  .tag {
    display: inline-block;
    margin-right: 3px;
    margin-bottom: 6px;
    padding: 2px 10px;
    text-align: center;
    background-color: $tag-bg-color;
    border-radius: 20px;
    color: $tag-text-color;
    font-size: $tag-text-size;
    cursor: pointer;
  }

  .tag-title-text {
    display: inline-block;
  }

  .tag-title {
    font-weight: 500;
  }

  .tag.writing {
    background-color: $tag-writing;
  }

  .tag.tech {
    background-color: $tag-tech; 
  }

  .tag.interviews {
    background-color: $tag-interviews;
  }

  .tag.travel {
    background-color: $tag-travel;
  }

  .tag.work {
    background-color: $tag-work; 
  }

  .tag.disney {
    background-color: $tag-disney;
  }

  .tag.health {
    background-color: $tag-health;
  }

  .tag.matriarchy {
    background-color: $tag-matriarchy;
  }

  .tag.management {
    background-color: $tag-management;
  }

  .tag.life {
    background-color: $tag-life;
  }

  .tag.reading {
    background-color: $tag-reading;
  }

  .tag.design {
    background-color: $tag-design;
  }

  .tag.podcast {
    background-color: $tag-podcast;
  }
}

.newsletter {
  width: $newsletter-width;
  height: $newsletter-height;
}

@media only screen and (max-width: 650px) {
  .newsletter {
    width: 100%;
  }
}

